Audio Engine fixed linker errors, game now runs

--- a/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/RogueRacingBattleRoyale.vcxproj
+++ b/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/RogueRacingBattleRoyale.vcxproj
@@ -112,7 +112,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;GLM_FORCE_CXX17;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Program Files (x86)\Audiokinetic\Wwise2024.1.1.8691\SDK\include;C:\Program Files (x86)\Audiokinetic\Wwise2024.1.1.8691\SDK\samples\SoundEngine\Win32;C:\Program Files (x86)\Audiokinetic\Wwise2024.1.1.8691\SDK\samples\SoundEngine\Common;$(SolutionDir);$(ProjectDir);C:\Users\jaydo\Documents\GitHub\JoshNickProjects\JoshProjects\GraphicsProject\deps\include\ImGui;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Program Files (x86)\Audiokinetic\Wwise2024.1.1.8691\SDK\include;C:\Program Files (x86)\Audiokinetic\Wwise2024.1.1.8691\SDK\samples\SoundEngine\Win32;C:\Program Files (x86)\Audiokinetic\Wwise2024.1.1.8691\SDK\samples\SoundEngine\Common;$(SolutionDir)\JoshProjects\GraphicsProject\deps\include\ImGui;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -124,7 +124,7 @@ AkMusicEngine.lib
 ;AkSoundEngine.lib;
 AkAudioInputSource.lib;
 CommunicationCentral.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Program Files (x86)\Audiokinetic\Wwise2024.1.1.8691\SDK\x64_vc170\Debug\lib;C:\Users\jaydo\Documents\GitHub\JoshNickProjects\JoshProjects\GraphicsProject\deps\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Program Files (x86)\Audiokinetic\Wwise2024.1.1.8691\SDK\x64_vc170\Profile\lib;C:\Program Files (x86)\Audiokinetic\Wwise2024.1.1.8691\SDK\x64_vc170\Debug\lib;$(SolutionDir)\JoshProjects\GraphicsProject\deps\lib</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -135,7 +135,7 @@ CommunicationCentral.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Program Files (x86)\Audiokinetic\Wwise2024.1.1.8691\SDK\samples\SoundEngine\Win32;C:\Program Files (x86)\Audiokinetic\Wwise2024.1.1.8691\SDK\samples\SoundEngine\Common;C:\Program Files (x86)\Audiokinetic\Wwise2024.1.1.8691\SDK\include;C:\Users\jaydo\Documents\GitHub\JoshNickProjects\JoshProjects\GraphicsProject\deps\include\ImGui;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Program Files (x86)\Audiokinetic\Wwise2024.1.1.8691\SDK\samples\SoundEngine\Win32;C:\Program Files (x86)\Audiokinetic\Wwise2024.1.1.8691\SDK\samples\SoundEngine\Common;C:\Program Files (x86)\Audiokinetic\Wwise2024.1.1.8691\SDK\include;$(SolutionDir)\JoshProjects\GraphicsProject\deps\include\ImGui;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -143,7 +143,7 @@ CommunicationCentral.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>freetype.lib;freetype-gl.lib;SDL2main.lib;SDL2.lib;opengl32.lib;glew32.lib;SDL2_ttf.lib;SDL2_mixer.lib;JAGEngine.lib;box2d.lib;glu32.lib;CommunicationCentral.lib;AkSoundEngine.lib;AkMemoryMgr.lib;AkStreamMgr.lib;AkMusicEngine.lib;AkSpatialAudio.lib;AkAudioInputSource.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Program Files (x86)\Audiokinetic\Wwise2024.1.1.8691\SDK\x64_vc170\Release\lib;C:\Users\jaydo\Documents\GitHub\JoshNickProjects\JoshProjects\GraphicsProject\deps\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Program Files (x86)\Audiokinetic\Wwise2024.1.1.8691\SDK\x64_vc170\Profile\lib;C:\Program Files (x86)\Audiokinetic\Wwise2024.1.1.8691\SDK\x64_vc170\Release\lib;$(SolutionDir)\JoshProjects\GraphicsProject\deps\lib</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
