--- a/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/RogueRacingBattleRoyale.vcxproj.filters
+++ b/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/RogueRacingBattleRoyale.vcxproj.filters
@@ -159,6 +159,9 @@
     <ClCompile Include="AudioEngine.cpp">
       <Filter>Source Files\Audio</Filter>
     </ClCompile>
+    <ClCompile Include="TrackNode.cpp">
+      <Filter>Source Files\Levels</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BoosterObject.h">
