--- a/JoshProjects/GraphicsProject/JAGEngine/JAGEngine.vcxproj
+++ b/JoshProjects/GraphicsProject/JAGEngine/JAGEngine.vcxproj
@@ -122,7 +122,7 @@
     </Link>
     <Lib>
       <AdditionalLibraryDirectories>C:\Program Files (x86)\Audiokinetic\Wwise2024.1.1.8691\SDK\x64_vc170\Debug\lib;C:\Program Files (x86)\Audiokinetic\Wwise2024.1.1.8691\SDK\x64_vc170\Profile\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>AkMemoryMgr.lib;AkStreamMgr.lib;AkMusicEngine.lib;AkSoundEngine.lib;AkAudioInputSource.lib;CommunicationCentral.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -143,8 +143,9 @@
     </Link>
     <Lib>
       <AdditionalLibraryDirectories>C:\Program Files (x86)\Audiokinetic\Wwise2024.1.1.8691\SDK\x64_vc170\Profile\lib;C:\Program Files (x86)\Audiokinetic\Wwise2024.1.1.8691\SDK\x64_vc170\Release\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <OutputFile> </OutputFile>
-      <AdditionalDependencies>AkMemoryMgr.lib;AkStreamMgr.lib;AkMusicEngine.lib;AkSoundEngine.lib;AkAudioInputSource.lib;CommunicationCentral.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <OutputFile>
+      </OutputFile>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
