Texture Editor progress

--- a/NickProjects/graphicsTutorials/PixelCraft/imgui.ini
+++ b/NickProjects/graphicsTutorials/PixelCraft/imgui.ini
@@ -19,7 +19,12 @@ Size=638,338
 Collapsed=0
 
 [Window][Texture Editor]
-Pos=424,226
-Size=937,525
+Pos=671,539
+Size=476,277
+Collapsed=0
+
+[Window][Texture]
+Pos=674,43
+Size=470,489
 Collapsed=0
 
