--- a/NickProjects/graphicsTutorials/PixelCraft/PixelCraft.vcxproj.filters
+++ b/NickProjects/graphicsTutorials/PixelCraft/PixelCraft.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="TextureEditorScreen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ConnectedTextureSet.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h">
@@ -84,6 +87,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TextureEditorScreen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ConnectedTextureSet.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
