--- a/NickProjects/graphicsTutorials/PixelCraft/imgui.ini
+++ b/NickProjects/graphicsTutorials/PixelCraft/imgui.ini
@@ -14,17 +14,17 @@ Size=200,150
 Collapsed=0
 
 [Window][Main Menu]
-Pos=565,318
+Pos=581,319
 Size=638,338
 Collapsed=0
 
 [Window][Texture Editor]
-Pos=666,541
-Size=476,277
+Pos=372,680
+Size=1118,371
 Collapsed=0
 
 [Window][Texture]
-Pos=748,194
-Size=328,332
+Pos=264,-5
+Size=1288,667
 Collapsed=0
 
