--- a/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
+++ b/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
@@ -3,8 +3,8 @@ Pos=60,60
 Size=400,400
 
 [Window][Main Menu]
-Pos=5,-7
-Size=206,200
+Pos=10,12
+Size=199,169
 
 [Window][Debug Controls]
 Pos=726,189
@@ -15,8 +15,8 @@ Pos=10,10
 Size=200,100
 
 [Window][Track Editor]
-Pos=4,148
-Size=541,577
+Pos=9,198
+Size=538,536
 
 [Window][Level Editor Controls]
 Pos=10,10
@@ -27,23 +27,23 @@ Pos=10,10
 Size=200,200
 
 [Window][Test Mode]
-Pos=8,5
+Pos=9,11
 Size=302,288
 
 [Window][Car Properties]
-Pos=1360,160
-Size=441,742
+Pos=1094,-1
+Size=403,880
 
 [Window][Save Level##modal]
 Pos=618,308
 Size=300,120
 
 [Window][Load Level##modal]
-Pos=619,156
+Pos=620,161
 Size=300,400
 
 [Window][AI Settings]
-Pos=6,617
+Pos=7,554
 Size=356,184
 
 [Window][Debug Info]
@@ -52,9 +52,21 @@ Size=200,150
 
 [Window][OpenGL Debug]
 Pos=211,2
-Size=332,160
+Size=169,171
 
 [Window][Performance Debug]
 Pos=-1,288
 Size=327,665
+
+[Window][Audio Control]
+Pos=379,612
+Size=451,114
+
+[Window][Main Menu (Game)]
+Pos=643,218
+Size=250,300
+
+[Window][Race Results]
+Pos=568,218
+Size=400,300
 
