Added Cave regeneration imgui sliders/button

--- a/NickProjects/graphicsTutorials/PixelCraft/imgui.ini
+++ b/NickProjects/graphicsTutorials/PixelCraft/imgui.ini
@@ -4,13 +4,13 @@ Size=400,400
 Collapsed=0
 
 [Window][Settings]
-Pos=1410,1038
-Size=618,407
+Pos=1411,-7
+Size=541,668
 Collapsed=0
 
 [Window][OpenGL Debug]
-Pos=4,1038
-Size=200,150
+Pos=3,2
+Size=200,136
 Collapsed=0
 
 [Window][Main Menu]
@@ -19,12 +19,12 @@ Size=638,338
 Collapsed=0
 
 [Window][Texture Editor]
-Pos=296,659
+Pos=394,669
 Size=1118,371
 Collapsed=0
 
 [Window][Texture]
-Pos=520,0
-Size=1200,600
+Pos=258,8
+Size=1336,657
 Collapsed=0
 
