--- a/NickProjects/graphicsTutorials/PixelCraft/imgui.ini
+++ b/NickProjects/graphicsTutorials/PixelCraft/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Settings]
-Pos=1411,0
-Size=541,668
+Pos=1120,-10
+Size=749,1010
 Collapsed=0
 
 [Window][OpenGL Debug]
