fixed edge crash and made camera stop when you reach the map border

--- a/NickProjects/graphicsTutorials/PixelCraft/PixelCraft.vcxproj
+++ b/NickProjects/graphicsTutorials/PixelCraft/PixelCraft.vcxproj
@@ -168,6 +168,7 @@
     <ClInclude Include="CellularAutomataManager.h" />
     <ClInclude Include="ConnectedTextureSet.h" />
     <ClInclude Include="DebugDraw.h" />
+    <ClInclude Include="FractalNoise.h" />
     <ClInclude Include="GameplayScreen.h" />
     <ClInclude Include="MainMenuScreen.h" />
     <ClInclude Include="Player.h" />
