--- a/NickProjects/graphicsTutorials/PixelCraft/imgui.ini
+++ b/NickProjects/graphicsTutorials/PixelCraft/imgui.ini
@@ -4,9 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Settings]
-Pos=1120,-10
+Pos=1110,12
 Size=749,1010
-Collapsed=0
+Collapsed=1
 
 [Window][OpenGL Debug]
 Pos=3,2
