--- a/NickProjects/graphicsTutorials/PixelCraft/PixelCraft.vcxproj.filters
+++ b/NickProjects/graphicsTutorials/PixelCraft/PixelCraft.vcxproj.filters
@@ -95,5 +95,8 @@
     <ClInclude Include="ConnectedTextureSet.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FractalNoise.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
