--- a/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
+++ b/JoshProjects/GraphicsProject/RogueRacingBattleRoyale/imgui.ini
@@ -15,7 +15,7 @@ Pos=10,10
 Size=200,100
 
 [Window][Track Editor]
-Pos=9,198
+Pos=35,198
 Size=538,536
 
 [Window][Level Editor Controls]
@@ -31,7 +31,7 @@ Pos=9,11
 Size=302,288
 
 [Window][Car Properties]
-Pos=1094,-1
+Pos=1092,0
 Size=403,880
 
 [Window][Save Level##modal]
@@ -39,11 +39,11 @@ Pos=618,308
 Size=300,120
 
 [Window][Load Level##modal]
-Pos=620,161
+Pos=620,160
 Size=300,400
 
 [Window][AI Settings]
-Pos=7,554
+Pos=7,553
 Size=356,184
 
 [Window][Debug Info]
@@ -69,4 +69,8 @@ Size=250,300
 [Window][Race Results]
 Pos=568,218
 Size=400,300
+
+[Window][Race Start]
+Pos=668,318
+Size=200,100
 
